<resources>
    <string name="app_name">Tunify</string>
    <string name="_freqLabel">0</string>
    <string name="pitch_value">G#4</string>
    <string name="strPitchValue">E2</string>
    <string name="tuningButtonStr">TUNING</string>
    <string name="tuning">Tuning</string>
    <string name="muted">Muted</string>
    <string name="switchMuted">Muted</string>
    <string name="switchTextOn">Tuning</string>
    <string name="switchTextOff">Muted</string>
    <string name="guitarImageViewAltStr">Guitar Headstock Image</string>
    <string name="textViewNote6Str">E4</string>
    <string name="textViewNote5Str">B4</string>
    <string name="textViewNote4Str">G3</string>
    <string name="textViewNote1Str">E2</string>
    <string name="textViewNote2Str">A2</string>
    <string name="textViewNote3Str">D3</string>
    <string name="tuningsButtonStr">Tunings</string>
    <string name="information_image_button_alt_str">Information Image Button</string>
    <string name="freeTuneToggleStr">Free Tune Toggle</string>
    <string name="freeTuneToggleOnStr">Free Tuning</string>
    <string name="freeTuneToggleOffStr">Locked Tuning</string>
    <string name="logoImgViewAltStr">Logo Image View</string>
    <string name="menuTunerStr">Tuner</string>
    <string name="menuInfoStr">Info</string>
    <string name="menuTuningsStr">Tunings</string>
    <string name="menuSettingsStr">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tuningsFragmentTitleStr">Tunings</string>
    <string name="background_color_image">Background Color Image</string>
    <string name="delete_item_button">Delete Item Button</string>
    <string name="add_tuning_button">Add Tuning Button</string>
    <string name="sort_button">Sort tunings</string>
    <string name="search_tuning_hint">Search tunings…</string>
    <string name="sort_default">Default (creation date)</string>
    <string name="sort_name_asc">Name A → Z</string>
    <string name="sort_name_desc">Name Z → A</string>
    <string name="sort_id_desc">Creation date newest first</string>
    <string name="add_tuning_dialog_title">Add Tuning</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>
    <string name="new_tuning_name">Tuning Name</string>
    <string name="new_tuning_selected_notes_label">Select Notes</string>
    <string name="tunify">Tunify</string>
    <string name="settingsFragmentTitleStr">Settings</string>
    <string name="infoFragmentTitleStr">Info</string>
    <string name="lock_tuner">Lock Tuner</string>
    <string name="reset_tunings_database">Reset Tunings Database</string>
    <string name="load_last_muted_state">Load Last Muted State</string>
    <string name="info_str"><b>Tunify</b> is a Guitar Tuner application developed implementing the Yin algorithm for pitch detection. You can find more information about the specific algorithm on the relevant <a href="http://recherche.ircam.fr/equipes/pcm/cheveign/ps/2002_JASA_YIN_proof.pdf">paper</a> published by Alain de Cheveigné and Hideki Kawahara in 2001.\n\nThe code of the project is entirely open sourced and you can find it, <a href="https://github.com/thestbar/tunify">here</a>. \n\nMore information about the way the project was structured and built can be found on my personal website <a href="https://stavrosbarousis.com">stavrosbarousis.com</a>.\n\nThe android code is written in Kotlin. Feel free to contact me at stavrosbarousis@gmail.com or through the platform from inside my personal website.\n\nThis application does not collect any user data. For more information read our <a href="https://app.enzuzo.com/policies/privacy/2630e812-57b7-11ee-8daf-cb6f4d735f74">Privacy Policy</a>.\n\n<b>MIT License</b>\n\nCopyright © 2023 Stavros Barousis\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON INFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
</resources>