<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".core.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05352798" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <ImageView
        android:id="@+id/imageViewFragmentScreenBck"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/custom_wenge"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/background_color_image" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/settingsFragmentTitleStr"
        android:textSize="26sp"
        android:textColor="@color/custom_linen"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/lockTunerSwitch"
        style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/lock_tuner"
        android:textColor="@color/custom_linen"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline16" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/loadLastMutedStateSwitch"
        style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/load_last_muted_state"
        android:textColor="@color/custom_linen"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toBottomOf="@+id/lockTunerSwitch" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/resetDatabaseTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_tunings_database"
        android:textColorHighlight="@color/custom_linen"
        android:paddingTop="10dp"
        android:textColor="@drawable/custom_selector_color_red"
        android:textSize="18sp"
        android:autoLink="web"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toBottomOf="@+id/loadLastMutedStateSwitch" />
</androidx.constraintlayout.widget.ConstraintLayout>